--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,23 +4,20 @@
     "password": "Chatbot1",
     "database": "charbotdb_production",
     "host": "chatbot.cloknwga7rez.us-west-2.rds.amazonaws.com",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   },
   "production": {
     "username": "admin",
     "password": "Chatbot1",
     "database": "charbotdb_production",
     "host": "chatbot.cloknwga7rez.us-west-2.rds.amazonaws.com",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   }
 }
